# Minesweeper

./: .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  Menu.h  Minesweeper  README.md  build.ninja  canvas.h  classes.h  cmake_install.cmake  game.cpp  main  savefile.h  setmine.h
